# cpp_learn

./: .gitignore  CMakeLists.txt  build.sh  readme.md  thirdparty.md
cmake/analysis/: clang-tidy.cmake
cmake/documentation/: Doxyfile.in  doxygen.cmake
cmake/format/: clang-format.cmake  format.sh
cmake/toolchains/cross/: arm-mtk8676t-gcc.cmake  arm-mtk8678-gcc.cmake  arm-qcm6125-gcc.cmake
common/hello/: CMakeLists.txt  hello.cpp
cpp/basic/: CMakeLists.txt  alias.cpp  assert.cpp  auto.cpp  decltype.cpp  default_delete.cpp  exception.cpp  explicit.cpp  file_op.cpp  file_stream.cpp  functional.cpp  lambda.cpp  macro_test.cpp  move_func.cpp  noexcept.cpp  nullptr.cpp  operator.cpp  override_final.cpp  refer.cpp  regex.cpp  smart_pointer.cpp  time_op.cpp  tuple.cpp  type_cast.cpp  uniform_init.cpp  using.cpp
cpp/class/: CMakeLists.txt  abstract_class.cpp  class_size.cpp  diamond_inherit.cpp  friend.cpp  multi_inherit.cpp  rtti.cpp  single_inherit.cpp  this_pointer.cpp
cpp/concurrent/: CMakeLists.txt  async.cpp  atomic.cpp  condition.cpp  mutex.cpp  practical.cpp  sem.cpp  thread.cpp
cpp/design/pimpl/: CMakeLists.txt  pimpl_main.cpp  string_wrapper.cpp  string_wrapper.h
cpp/stl/: CMakeLists.txt  array.cpp  deque.cpp  list.cpp  map.cpp  priority_queue.cpp  queue.cpp  set.cpp  stack.cpp  unordered_map.cpp  unordered_set.cpp  vector.cpp
cpp/template/: CMakeLists.txt  basic_template.cpp  hyber_template.cpp  readme.md  util_template.cpp  var_template.cpp  var_template_c17.cpp  var_template_v2.cpp
lib/cvi-lib-expected/: CMakeLists.txt
lib/cvi-lib-expected/cmake/: cvi-lib-expected-config.cmake.in
lib/cvi-lib-expected/include/: expected.h
lib/cvi-lib-expected/test/: test_expected.cpp
lib/cvi-lib-log/: .gitignore  CMakeLists.txt  README.md
lib/cvi-lib-log/cmake/: cvi-lib-log-config.cmake.in
lib/cvi-lib-log/etc/: log_cfg.toml
lib/cvi-lib-log/include/: MWPLog.h  cached_pid_formatter.h  log_cfg.h  log_cvi_sink.h  log_service.h
lib/cvi-lib-log/src/: log_cfg.cpp  log_service.cpp
lib/cvi-lib-log/test/: gtest_clog.cpp  gtest_log.cpp  perf_log.cpp  test_clog.c  test_log_main.cpp
lib/cvi-lib-timer/: CMakeLists.txt
lib/cvi-lib-timer/cmake/: cvi-lib-timer-config.cmake.in
lib/cvi-lib-timer/include/: accurate_timer.h  accurate_timer_interface.h  normal_timer.h  normal_timer_interface.h
lib/cvi-lib-timer/src/: accurate_timer.cpp  accurate_timer_interface.cpp  normal_timer.cpp  normal_timer_interface.cpp
lib/cvi-lib-timer/test/: cpp_timer_test.cpp  normal_timer_test.cpp  timer_thread_test.cpp
python/tsp/config/: config.yaml
python/tsp/resources/styles/: main.qss
python/tsp/src/: main.py
python/tsp/src/core/: mqtt_client.py  vehicle_manager.py
python/tsp/src/ui/: main_window.py  vehicle_detail.py  vehicle_list.py
python/tsp/src/utils/: config.py  logger.py
python/tsp/test/: test_pyside6.py
samples/mqtt/: CMakeLists.txt  readme.md
samples/mqtt/cpp/: mqtt_test.cpp
samples/mqtt/etc/: broker.config
samples/mqtt/python/: mqtt_test.py
samples/mqtt/script/: gen_mqtt_key_cert.sh
samples/openssl/: CMakeLists.txt  asymmetric_encrypt_test.cpp  cert_hld.cpp  encrypt_test.cpp  https_cm.cpp  readme.md  sign_test.cpp
samples/openssl/cert/: gen_cert.sh  root_cert.pem  root_cert.srl  root_private.pem  server_cert.pem  server_private.pem  server_req.pem
samples/someip/: CMakeLists.txt  readme.md
samples/someip/client/: client.cpp
samples/someip/idl/: someip_desc_services.fdepl  someip_desc_services.fidl  someip_desc_types.fdepl  someip_desc_types.fidl
samples/someip/script/: execute_client.sh  execute_server.sh  pub_com.json  sd_start.sh  src_gen.sh  sub_com.json
samples/someip/server/: server.cpp  server.h
samples/someip/src_gen/soa/sample/: CustomTypes.hpp  CustomTypesSomeIPDeployment.cpp  CustomTypesSomeIPDeployment.hpp
samples/someip/src_gen/v1/soa/sample/: TestSrvIf.hpp  TestSrvIfProxy.hpp  TestSrvIfProxyBase.hpp  TestSrvIfSomeIPCatalog.json  TestSrvIfSomeIPDeployment.cpp  TestSrvIfSomeIPDeployment.hpp  TestSrvIfSomeIPProxy.cpp  TestSrvIfSomeIPProxy.hpp  TestSrvIfSomeIPStubAdapter.cpp  TestSrvIfSomeIPStubAdapter.hpp  TestSrvIfStub.hpp  TestSrvIfStubDefault.hpp
samples/sqlite/: CMakeLists.txt  long_sqlite.cpp  sqlite_test.cpp
samples/work/: CMakeLists.txt  asan_test.cpp  cmake_test.cpp  xxmalloc_test.cpp
script/: build_base.sh  module_build.sh  setenv.sh  sh_module_build.sh
tool/fdbus_tool/: .gitignore  excel2x.py  readme.md
tool/fdbus_tool/samples/: fdbus_desc.xlsx  tbox_app.xlsx
tool/fdbus_tool/src/templates/: app_cmake.txt.j2  app_main.cpp.j2
tool/fdbus_tool/src/templates/fdbus_gen/: client_srv.cpp.j2  client_srv.h.j2  server_srv.cpp.j2  server_srv.h.j2
tool/fdbus_tool/src/templates/proto_gen/: srv.proto.j2  srv.proto2.j2
tool/fdbus_tool/src/utils/: excel_parse.py  log_config.py  util_func.py
